--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,27 @@
-version: '3.8'
-
+version: '3'
 services:
-  # 1. Container Database (Memgraph)
-  memgraph:
+  memgraph-db:
     image: memgraph/memgraph-platform
     container_name: memgraph-db
     ports:
-      - "7687:7687"  # Port kết nối Bolt
-      - "3000:3000"  # Port giao diện Memgraph Lab
-    environment:
-      - MEMGRAPH_USER=       # Để trống tức là không pass
-      - MEMGRAPH_PASSWORD=
-    # (Tùy chọn) Bỏ comment dòng dưới nếu muốn dữ liệu tồn tại sau khi tắt docker
-    # volumes:
-    #   - ./mg_lib:/var/lib/memgraph
+      - "7687:7687"
+      - "3000:3000"
+      - "7444:7444"
+    volumes:
+      - ./mg_lib:/var/lib/memgraph
+      - ./mg_log:/var/log/memgraph
+      - ./mg_etc:/etc/memgraph
+    # REMOVED THE COMMAND LINE HERE
 
-  # 2. Container App (Python Streamlit)
   app:
     build: .
-    container_name: graph-app
+    container_name: streamlit-app
     ports:
       - "8501:8501"
-    depends_on:
-      - memgraph
-    environment:
-      # QUAN TRỌNG: Trong Docker, host không phải là localhost mà là tên service "memgraph"
-      - MEMGRAPH_HOST=memgraph
     volumes:
-      # Mount code vào để khi bạn sửa code ở ngoài, trong docker tự cập nhật (Hot reload)
       - ./:/app
+    environment:
+      - MEMGRAPH_HOST=memgraph-db
+      - MEMGRAPH_PORT=7687
+    depends_on:
+      - memgraph-db
